objects/advpm__Timeline__c.object
<CustomObject>
    <fields>
        <fullName>advpm__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipName>Timeline</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>advpm__RecordId__c</fullName>
        <externalId>true</externalId>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Task_Status__c</fullName>
        <label>Task Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; advpm__RecordId__c , &quot;View&quot;, &quot;_top&quot;)</formula>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Timeline (DEPRECATED)</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline (DEPRECATED)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>